# chronoreason-kdsh-2026

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_NEW.md  app.py  dev.sh  main.py  pyproject.toml  requirements.txt  run.sh  run_pipeline.sh  run_streamlit.sh  run_tests.sh  setup.sh
.github/: dependabot.yml
data/sample/: backstory1.txt  backstory2.txt  backstory3.txt
src/ingestion/: chunker.py
src/reasoning/: claim_extractor.py  claim_validator.py  contradiction_score.py  decision_engine.py  timeline_builder.py
src/retrieval/: pathway_store.py
src/visualization/: timeline_graph.py
tests/: __init__.py  conftest.py  test_chunker.py  test_claim_extractor.py  test_contradiction_score.py  test_decision_engine.py  test_integration.py  test_pathway_store.py  test_timeline_builder.py
